# ha-energy-planner

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEX_IMPLEMENTATION_PROMPT.md  DECISIONS.md  DISCLAIMER.md  IMPLEMENTATION_PLAN.md  LICENSE  README.cs.md  README.md  SKILL.md  SPECIFICATION.md  TESTING.md  hacs.json  pyproject.toml
.github/workflows/: validate.yaml
custom_components/energy_planner/: __init__.py  allocation.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  ha_history.py  history.py  managed_loads.py  manifest.json  models.py  options.py  periods.py  planner.py  quality_scale.yaml  sensor.py  services.yaml  sources.py  strings.json
custom_components/energy_planner/translations/: cs.json  en.json  sk.json
docs/: automations.md  configuration.md  dashboard.md  entities.md  history.md  options.md  planner.md  quality_gate.md
docs/algorithms/: battery_model.md  charge_planner.md  history_model.md  lock_soc.md  safe_discharge.md  surplus.md
tests/components/energy_planner/: conftest.py  test_allocation.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_ha_history.py  test_history.py  test_legacy_parity.py  test_manifest.py  test_options_flow.py  test_planner.py  test_sensor.py  test_services.py  test_translations.py
tests/fixtures/: legacy_active_flow_sunny_charge.json
