[project]
name = "ha-energy-planner"
version = "0.1.10"
description = "Home Assistant custom integration for PV, battery, tariff and EV planning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.12.0",
]
ha = [
  "pytest-homeassistant-custom-component>=0.13.0",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
